# rws-ddd

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pytest.ini
.github/workflows/: ci.yml
beheer/: .env.example  CLAUDE.md  Dockerfile  README.md  __init__.py  pyproject.toml
beheer/alembic/: env.py
beheer/alembic/versions/: 20260701_0001_initial.py
beheer/application/: CLAUDE.md  __init__.py  dto.py  errors.py  ports.py  use_cases.py
beheer/domain/: CLAUDE.md  __init__.py  events.py  exceptions.py  model.py  repositories.py  services.py
beheer/infrastructure/: CLAUDE.md  __init__.py  config.py  db.py  main.py  models.py  rabbitmq.py  rabbitmq_consumer.py  repositories.py  runtime.py  uow.py
beheer/interface/: CLAUDE.md  __init__.py  routes.py  schemas.py  security.py
beheer/tests/: __init__.py  fakes.py  test_api_integration.py  test_application.py  test_domain.py  test_interface_validation.py  test_rabbitmq.py  test_repository_integration.py
contract/: .env.example  CLAUDE.md  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  vitest.integration.config.ts
contract/application/: CLAUDE.md
contract/domain/: CLAUDE.md
docs/: DDD verslag, Laurens, Sven, Joran, Kaleb.docx  ci-cd.md  context-map.md  conventions.md  dokploy.md  events.md  frontend-demo-prompt.md  ontwerp.md  vervolgstappen.md
monitoring/: .env.example  CLAUDE.md  Dockerfile  Monitoring.slnx  README.md
onderhoud/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
(+340 files in other folders)
